add_executable(buffer_test ./buffer_test.cc)
add_executable(cache_test ./cache_test.cc)
add_executable(lockfreequeue_test ./lockfreequeue_test.cc)
add_executable(rbtree_test ./rbtree_test.cc)
add_executable(eventloop_test ./eventloop_test.cc)
add_executable(threadpool_test ./threadpool_test.cc)
add_executable(threadpool_benchmark ./threadpool_benchmark.cc)
add_executable(thread_test ./thread_test.cc)
add_executable(timer_test ./timer_test.cc)
add_executable(tcpchannel_connect_test ./tcpchannel_connect_test.cc)

target_link_libraries(buffer_test io)
target_link_libraries(cache_test io)
target_link_libraries(rbtree_test io)
target_link_libraries(eventloop_test io net)
target_link_libraries(tcpchannel_connect_test io)
target_link_libraries(lockfreequeue_test base)
target_link_libraries(threadpool_test base)
target_link_libraries(threadpool_benchmark base)
target_link_libraries(thread_test base)
target_link_libraries(timer_test base)
